--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,6 +17,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SENSITIVITY_DETECTO }}'
           channelId: live
           projectId: sensitivity-detecto
+          entrypoint: webapp/
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
-          FOLDER: webapp
